--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=MapFlow
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/MapFlow
+spring.data.mongodb.database=MapFlow
+
+# Server configuration
+server.port=8081
+server.servlet.context-path=/api
+
+# Other settings
+lombok.addLombokGeneratedAnnotation=true
+spring.servlet.multipart.max-file-size=2048MB
+spring.servlet.multipart.max-request-size=2048MB
+
